--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.0",
+    "moment": "^2.22.1",
     "react": "^16.3.2",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-moment": "^0.7.0",
+    "react-scripts": "1.1.4",
+    "react-select": "^2.0.0-beta.2"
   },
   "scripts": {
     "start": "react-scripts start",
